--- a/index.html
+++ b/index.html
@@ -28,17 +28,15 @@
 <p class="maintext"></p>
             <div class="maintext_comment">
                 <p>I invite you to explore & integrate your core values.</p>
-                <p>Call me if you need inspired action,
-                    calming session, help with self-trust & self-respect
+                <p>Call me if you need a calming session, motivation for inspired action, help with self-trust & self-respect
                     to be able to shape your reality better.</p></div>
             <div class="maintext_comment">
-<p class="maintext">What if there is more beauty, bliss and joy, achieved through creativity & courage?</p>
-                <p>Meet me to practice emotional intelligence, curiosity,</p>
-                <p>playfulness, patience, care, concentration, respect & kindness.</p>
+<p class="maintext">Imagibe there is more beauty, bliss and joy in your personal life and professional realisations How do you want to feel?
+    What if more people released themselves from cages of cliché thinking & achieved love by practising creativity & courage?</p>
+                <p>Meet me to learn & train emotional intelligence, curiosity, playfulness, patience, care, concentration, respect & kindness.</p>
             </div>
-                
             <div class="maintext_comment">
-                 <p class="maintext"><p>Many people have benefitted from sessions with me:</p>
+                 <p class="maintext"><p>Hundreds of people have benefitted from sessions with me:</p>
                 <p>1) found solutions to diverse challenges & reached wellbeing,</p>
                      <p>2) gained clear visions & implemented empathy as a strategic tool for personal and team success</p><p class="maintext"></p>
 
