--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                 <p>Call me if you need a calming session, motivation for inspired action, help with self-trust & self-respect
                     to be able to shape your reality better.</p></div>
             <div class="maintext_comment">
-<p class="maintext">Imagibe there is more beauty, bliss and joy in your personal life and professional realisations How do you want to feel?
-    What if more people released themselves from cages of cliché thinking & achieved love by practising creativity & courage?</p>
+<p class="maintext">Just imagine...</p>
+    there is more beauty, bliss and joy in your personal life and professional realisations.
+                How do you feel?
+    What if more people released themselves from cages of clichés & achieved love by enjoying creativity & courage?</p>
                 <p>Meet me to learn & train emotional intelligence, curiosity, playfulness, patience, care, concentration, respect & kindness.</p>
             </div>
             <div class="maintext_comment">
