--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="column_photo">
-            <img src="png.png" alt="Фото">
+            <img src="png small.png" alt="Фото">
         </div>        
     </div>
     </section>             
@@ -91,7 +91,7 @@
     
         <ul>
             <li><b>Educational</b>: Existential Art-Therapy & Holistic Education Studio, Music Lab & Record Studio for Neurodiverse Children, Teens & Adults</li>
-            <li><b>Charitable</b>: Tibetan Martial Arts & Yoga Coaching Marathon, Writer's Labs, InnovativeIincubators for Genius Teens</li>
+            <li><b>Charitable</b>: Tibetan Martial Arts & Yoga Coaching Marathon, Writer's Labs, Innovative furniture for Active & Genius Teens</li>
         </ul>
     
     </section>
