--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="column_photo">
-            <img src="png small.png" alt="Фото">
+            <img src="500.png" alt="Фото">
         </div>        
     </div>
     </section>             
