--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="column_photo">
-            <img src="500.png" alt="Фото">
+            <img src="429.png" alt="Фото">
         </div>        
     </div>
     </section>             
@@ -90,7 +90,7 @@
         <h2>Projects</h2>
     
         <ul>
-            <li><b>Educational</b>: Existential Art-Therapy & Holistic Education Studio, Music Lab & Record Studio for Neurodiverse Children, Teens & Adults</li>
+            <li><b>Educational</b>: Existential Art-Therapy & Holistic Self-Management Studio, Music Lab & Record Studio for Neurodiverse People</li>
             <li><b>Charitable</b>: Tibetan Martial Arts & Yoga Coaching Marathon, Writer's Labs, Innovative furniture for Active & Genius Teens</li>
         </ul>
     
