--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                 <p>1) found solutions to diverse challenges & reached wellbeing,</p>
                      <p>2) gained clear visions & integrated empathy as a strategic tool for their own and team success.</p><p class="maintext"></p>
 
-<p class="maintext">With expertise in education, psychotherapy, coaching and production</p>
-    <p>I craft individual workshops addressing soft skills for life, school and business.</p><p class="maintext"></p>
+<p class="maintext">With expertise in education, psychotherapy, coaching and production I craft individual workshops addressing soft skills for life, school and business.</p><p class="maintext"></p>
             </div>
         </div>
         <div class="column_photo">
