--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p class="maintext">provides guidance & support for individuals, families & corporate leaders.           
 <p class="maintext"></p>
             <div class="maintext_comment">
-                <p>I invite you to explore & integrate your core values.</p>
+                <p>I invite you to explore your core values.</p>
                 <p>Call me if you need a calming session, motivation for inspired action, help with self-trust & self-respect
                     to be able to shape your reality better.</p></div>
             <div class="maintext_comment">
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="column_photo">
-            <img src="500.png" alt="Фото">
+            <img src="490.png" alt="Фото">
         </div>        
     </div>
     </section>             
