--- a/index.html
+++ b/index.html
@@ -28,25 +28,24 @@
 <p class="maintext"></p>
             <div class="maintext_comment">
                 <p>I invite you to explore your core values.</p>
-                <p>Call me if you need a calming session, motivation for inspired action, help with self-trust & self-respect
-                    to be able to shape your reality better.</p></div>
+                <p>Call me if you need a calming session to sort out your insecurities & anxiety, get a kick of motivation for inspired action, receive help with self-trust & self-respect
+                    or a simple talk with someone who listens with care & dedication.</p></div>
             <div class="maintext_comment">
 <p class="maintext">Just imagine...</p>
-    there is more beauty, bliss and joy in your personal life and professional realisations.
-                How do you feel?
-    What if more people released themselves from cages of clichés & achieved love by enjoying creativity & courage?</p>
-                <p>Meet me to learn & train emotional intelligence, curiosity, playfulness, patience, care, concentration, respect & kindness.</p>
+    there is more beauty & bliss in your personal life and professional realisations. How do you feel?
+    <p class="maintext">What if more people released themselves from cages of clichés & experienced love on a daily basis, enjoying creativity & courage?</p>
+                <p>Join my courses to meet & learn, train emotional & intelligence & body awareness, playfulness, patience & kindness.</p>
             </div>
             <div class="maintext_comment">
                  <p class="maintext"><p>Hundreds of people have benefitted from sessions with me:</p>
-                <p>1) found solutions to diverse challenges & reached wellbeing,</p>
-                     <p>2) gained clear visions & integrated empathy as a strategic tool for their own and team success.</p><p class="maintext"></p>
+                <p>1) together we found solutions to diverse challenges & reached wellbeing,</p>
+                     <p>2) gained clear visions & integrated empathy as a strategic tool for personal & team success!</p><p class="maintext"></p>
 
-<p class="maintext">With expertise in education, psychotherapy, coaching and production I craft individual workshops addressing soft skills for life, school and business.</p><p class="maintext"></p>
+<p class="maintext">With expertise in education, psychotherapy, coaching and media production I craft individual workshops addressing soft skills for life, school and business.</p><p class="maintext"></p>
             </div>
         </div>
         <div class="column_photo">
-            <img src="490.png" alt="Фото">
+            <img src="999 perfect.png" alt="Фото">
         </div>        
     </div>
     </section>             
