--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="maintext_comment">
 <p class="maintext">Just imagine...</p>
     you experience ease, joy & bliss in your personal life and professional realisations on a daily basis. How do you feel?
-    <p class="maintext">What if more people released themselves from cages of clichés & experienced love on a daily basis, enjoying creativity & courage?</p>
+    <p class="maintext">...more people released themselves from cages of clichés & experienced love on a daily basis, enjoying creativity & courage?</p>
                 <p>Join my courses to meet & learn, train emotional intelligence & body awareness, playfulness, patience & kindness.</p>
             </div>
             <div class="maintext_comment">
