--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="maintext_comment">
 <p class="maintext">Just imagine...</p>
     you experience ease, joy & bliss in your personal life and professional realisations on a daily basis. How do you feel?
-    <p class="maintext">...more people released themselves from cages of clichés & experienced love on a daily basis, enjoying creativity & courage?</p>
-                <p>Join my courses to meet & learn, train emotional intelligence & body awareness, playfulness, patience & kindness.</p>
+    <p class="maintext">...more people released themselves from cages of clichés & truly loved...</p>
+                <p>Join my courses to meet & learn, practise courage, authentic self-expression, train emotional intelligence, body awareness, playfulness, patience, culture, kindness & overall inspiration!</p>
             </div>
             <div class="maintext_comment">
                  <p class="maintext"><p>Hundreds of people have benefitted from sessions with me:</p>
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="column_photo">
-            <img src="920.png" alt="Фото">
+            <img src="920 perfect.png" alt="Фото">
         </div>        
     </div>
     </section>             
@@ -58,11 +58,11 @@
             <div class="price">
                 <ul>
                     <li><b>1 session:</b> actualize the issue
-                         <p>108EUR = 2-3 hours = convenient time <p></li>
+                         <p>108€ = 2-3 hours = convenient time <p></li>
                     <li><b>3 weeks:</b> begin the transformation
-                         <p>1008EUR = 21 sessions = 1 hour = daily</p></li>
+                         <p>1008€ = 21 sessions = 1 hour = daily</p></li>
                     <li><b>3 months</b> integrate the change
-                         <p>to be discussed </p></li>
+                         <p><to be discussed></p></li>
                 </ul>
     
             </div>
