--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <div class="price">
                 <ul>
                     <li><b>1 session:</b> actualize the issue
-                         <p>108€ = 2-3 hours = convenient time <p></li>
+                         <p>€108 = 2-3 hours = convenient time <p></li>
                     <li><b>3 weeks:</b> begin the transformation
-                         <p>1008€ = 21 sessions = 1 hour = daily</p></li>
+                         <p>€1008 = 21 sessions = 1 hour = daily</p></li>
                     <li><b>3 months</b> integrate the change
                          <p><to be discussed></p></li>
                 </ul>
