--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <section id="about" class="bg">
     <div class="flex">
-        <div class="column_text">
+ <div class="column_text">
 <h1>Alisa LarchenCoach</h1>
 <p class="maintext">provides guidance & support for individuals, families & corporate leaders.           
-<p class="maintext"></p>
+<p class="maintext">
             <div class="maintext_comment">
                 <p>I invite you to explore your core values.</p>
                 <p>Call me if you need a calming session to sort out your insecurities & anxiety, get a kick of motivation for inspired action, receive help with self-trust & self-respect
