--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <div class="flex">
  <div class="column_text">
 <h1>Alisa LarchenCoach</h1>
-<p class="maintext">provides guidance & support for individuals, families & corporate leaders.           
-<p class="maintext">
+<b class="maintext">provides guidance & support for individuals, families & corporate leaders.<b /class>class="maintext">
             <div class="maintext_comment">
                 <p>I invite you to explore your core values.</p>
                 <p>Call me if you need a calming session to sort out your insecurities & anxiety, get a kick of motivation for inspired action, receive help with self-trust & self-respect
