--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p class="maintext">Just imagine...</p>
     you experience ease, joy & bliss in your personal life and professional realisations on a daily basis. How do you feel?
     <p class="maintext">...more people released themselves from cages of clichés & truly loved...</p>
-                <p>Join my courses to meet & learn, practise courage, authentic self-expression, train emotional intelligence, body awareness, playfulness, patience, culture, kindness & overall inspiration!</p>
+                <p>Join my courses to meet & learn, practise courage, authentic self-expression, train emotional intelligence & body awareness, express freely & playfully, discover your personal rhythms of making decisions, time & effort management, discipline, patience, culture, kindness & inspiration! WoW! </p>
             </div>
             <div class="maintext_comment">
                  <p class="maintext"><p>Hundreds of people have benefitted from sessions with me:</p>
