--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li><b>3 weeks:</b> begin the transformation
                          <p>€1008 = 21 sessions = 1 hour = daily</p></li>
                     <li><b>3 months</b> integrate the change
-                         <p><to be discussed></p></li>
+                         <p>€ to be discussed = regular check-in's = patronage</p></li>
                 </ul>
     
             </div>
