--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>1) together we found solutions to diverse challenges & reached wellbeing,</p>
                      <p>2) gained clear visions & integrated empathy as a strategic tool for personal & team success!</p><p class="maintext"></p>
 
-<p class="maintext">With expertise in education, psychotherapy, coaching and media production I craft individual workshops addressing soft skills for life, school and business.</p><p class="maintext"></p>
+<p class="maintext">With expertise in education, psychotherapy, coaching and media production I craft meetings individually, addressing soft skills for life, school and business.</p><p class="maintext"></p>
             </div>
         </div>
         <div class="column_photo">
@@ -53,7 +53,7 @@
                     <li><b>3 weeks:</b> begin the transformation
                          <p>€1008 = 21 sessions = 1 hour = daily</p></li>
                     <li><b>3 months</b> integrate the change
-                         <p>€ to be discussed = regular check-in's = patronage</p></li>
+                         <p>€ to be discussed = patronage</p></li>
                 </ul>
     
             </div>
