--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <p>1) together we found solutions to diverse challenges & reached wellbeing,</p>
                      <p>2) gained clear visions & integrated empathy as a strategic tool for personal & team success!</p><p class="maintext"></p>
 
-With expertise in education, psychotherapy, coaching and media production <p class="maintext">I craft individual sessions and group workshops, addressing soft skills for life, school and business.</p><p class="maintext"></p>
+<p>With expertise in education, psychotherapy, coaching and media production</p>
+                <p class="maintext">I craft individual sessions and group workshops, addressing soft skills for life, school and business.</p><p class="maintext"></p>
             </div>
         </div>
         <div class="column_photo">
