--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2>Connect</h2>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
             <p>FaceBook: <a href="https://www.facebook.com/Lissenx/" target="\_blank" title="FaceBook Profile">Lissenx</a></p>
-            <p>Instagram: <a href="https://www.instagram.com/aim.platform/" target="\_blank" title="Instagram Profile">Aim_Platform</a></p>
+            <p>Instagram: <a href="https://www.instagram.com/special_agent_fairy/" target="\_blank" title="Instagram Profile">special_agent_fairy</a></p>
     
         </section>
     
