--- a/ru/index.html
+++ b/ru/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="column_photo">
-            <img src="../larchencoach.png" alt="Фото">
+            <img src="../img/larchencoach.png" alt="Фото">
         </div>        
     </div>
     </section>             
