--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div style="padding-left: 30px;">
             <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
             <p>FaceBook: <a href="https://www.facebook.com/Lissenx/" target="\_blank" title="FaceBook Profile">Lissenx</a></p>
-            <p>Instagram: <a href="https://www.instagram.com/special_agent_fairy/" target="\_blank" title="Instagram Profile">special_agent_fairy</a></p>
+            <p>Instagram: <a href="https://www.instagram.com/therapy_retreat/" target="\_blank" title="Instagram Profile">therapy_retreat</a></p>
             </div>
 
         </section>
