--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <title>404 - Alisa LarchenCoach</title>
     <style>
         body {
-            background-color: #741818; /* Лучше цвет фона для страницы 404 */
-            color: #ffffff; /* Инвертированный цвет текста */
+            background-color: #FFFEF1; /* Лучше цвет фона для страницы 404 */
+            color: #3b1111; /* Инвертированный цвет текста */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -16,7 +16,7 @@
             font-size: 50px;
         }
         a {
-            color: #d5ffe2;
+            color: #195f2f;
         }
     </style>
 </head>
