--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">  
-    <link href="style.css" rel="stylesheet">    
+    <link href="style_desktop.css" rel="stylesheet" media="screen and (min-width: 868px)">
+    <link href="style_mobile.css" rel="stylesheet" media="screen and (max-width: 867px)">
 </head>
 <body>
     <section id="header" class="bg">
@@ -66,13 +67,15 @@
         <section id="contacts" class="bg">
     
             <h2>Schedule a meeting</h2>
-            <p></b>+357 97 658 958 (WhatsApp)</b></p>
-            <br/>
+            <div style="padding: 2px 30px 7px;">
+                <p><a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a> (WhatsApp)</p>
+            </div>
             <h2>Connect</h2>
             <div style="padding-left: 30px;">
             <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
             <p>FaceBook: <a href="https://www.facebook.com/Lissenx/" target="\_blank" title="FaceBook Profile">Lissenx</a></p>
             <p>Instagram: <a href="https://www.instagram.com/therapy.retreat/" target="\_blank" title="Instagram Profile">therapy.retreat</a></p>
+            <p>Telegram: <a href="https://t.me/dance_fight" target="\_blank" title="Telegram Public">dance_fight</a></p>
             </div>
 
         </section>
