--- a/uk/index.html
+++ b/uk/index.html
@@ -6,6 +6,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">  
     <link href="../style.css" rel="stylesheet">    
+    <link href="../style_desktop.css" rel="stylesheet" media="screen and (min-width: 968px)">
+    <link href="../style_mobile.css" rel="stylesheet" media="screen and (max-width: 967px)">    
 </head>
 <body>
     <section id="language" class="flex">
@@ -24,33 +26,77 @@
     <div class="flex">
         <div class="column_text">
             <h1>Аліса ЛарченКоуч</h1>              
-            <p class="maintext">Допомагає людям &nbsp;подолати невпевненість та тривогу, надихаючи їх на засвоєння та втілення резонансних практик для самопідтримки</p>
-            <div class="maintext_comment">
-                <p>Вона спеціалізується на роботі з розведеними батьками, надаючи класи арт-терапії їм особисто та їхнім дітям особисто чи в міні-групах. </p>                
-                <p>Аліса працює з чутливими та творчими підлітками, які зіштовхнулися з депресією, наркотиками чи насиллям та іншими викликами долі. </p>
-                <p>Особливу увагу приділяє одиноким матерям із так званими "важкими підлітками", допомагаючи обом сторонам примиритися із внутрішніми контрастами, відчути власний шлях, а також знайти й повірити у сили ним йти.</p>
-            </div>
+            
+            <p class="maintext">надає керівництво та підтримку для окремих осіб, сімей та корпоративних лідерів.</p>
+
+           <div class="maintext_comment">
+
+               <p>Я запрошую вас дослідити ваші основні цінності.</p>
+
+               <p>Зателефонуйте мені, якщо вам потрібна сесія заспокоєння, щоб розібратися з вашими невпевненостями та тривогами, отримати мотивацію для натхненних дій, отримати допомогу з самодовірою та самоповагою
+
+                   або просто поговорити з кимось, хто уважно та віддано слухає.</p>
+
+           </div>
+
+           <div>
+
+               <p class="maintext">Просто уявіть...</p>
+
+               <p>ви відчуваєте легкість, радість та блаженство у вашому особистому житті та професійних реалізаціях щодня. Як ви себе почуваєте?</p>
+
+               <p class="maintext">...більше людей звільнилися від кліше та дійсно полюбили...</p>
+
+               <p class="maintext_narrow">Приєднуйтесь до моїх курсів, щоб зустрітися та навчитися, практикувати сміливість, автентичне самовираження, тренувати емоційний інтелект та усвідомлення тіла, вільно та гравці виражати себе, відкривати особисті ритми прийняття рішень, управління часом та зусиллями, дисципліну, терпіння, культуру, доброту та натхнення! Вау! </p>
+
+           </div>
+
+           <div class="maintext_comment">
+
+               <p class="maintext">Сотні людей скористалися сесіями зі мною:</p>
+
+               <p>1) разом ми знайшли рішення для різних викликів і досягли добробуту,</p>
+
+               <p>2) отримали чіткі бачення та інтегрували емпатію як стратегічний інструмент для особистого та командного успіху!</p>
+
+           </div>
         </div>
         <div class="column_photo">
             <img src="../img/larchencoach.png" alt="Фото">
         </div>        
     </div>
+    <div class="end_text">
+        <p class="maintext">Маючи експертні знання в галузі освіти, психотерапії, коучингу та медіавиробництва, я створюю індивідуальні сесії та групові семінари, які охоплюють soft skills для життя, школи та бізнесу.</p>
+    </div>   
     </section>             
 
     <div class="container2">
         <section id="pricing" class="bg">
-            <h2>Ціна</h2>
-            <div class="price">Окрема сесія: 50€ - 220€ в залежності від запиту. <br/>Клієнт обирає ту суму яка для нього підйомна але "трішки кусається".                   
+            <h2>Ціна та пакети</h2>
+            <div class="price">
                 <ul>
-                    <li>Пакет <b>8 сесій</b>: 360€ < 1,584€ (вигода -10%)</li>
-                    <li>Пакет <b>21 сесій</b>: 840€ < 3,696€ (вигода -20%)</li>
+                    <li><b>1 сесія:</b> актуалізувати проблему
+                         <p>€108 = 2-3 години = зручний час</p></li>
+                    <li><b>3 тижні:</b> почати трансформацію
+                         <p>€1008 = 21 сесія = 1 година = щоденно</p></li>
+                    <li><b>3 місяці:</b> інтегрувати зміну
+                         <p>€ обговорюється = патронаж</p></li>
                 </ul>
             </div>
         </section>
         <section id="contacts" class="bg">
             <h2>Записатись на консультацію</h2>
-            <p>+380990889959 пишіть на будь-який месенжер за цим номером: <br><a href="https://t.me/+380990889959" target="_blank" title="Профіль Telegram">Telegram</a> - Whatsapp - <a href="viber://chat?number=+380990889959"  target="_blank">Viber</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="_blank" title="Профіль LinkedIn">alisalarchenko</a>.<br>Пошта: <a href="mailto:goosebumpsngiggles@gmail.com">goosebumpsngiggles@gmail.com</a> пишіть листи, наче собі.</p>
+            <div style="padding: 2px 30px 7px;">
+                <p><a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a> (WhatsApp)</p>
+            </div>
+
+            <h2>Социальні мережі</h2>
+            <div style="padding-left: 30px;">
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
+                <p>FaceBook: <a href="https://www.facebook.com/Lissenx/" target="\_blank" title="FaceBook Profile">Lissenx</a></p>
+                <p>Instagram: <a href="https://www.instagram.com/therapy.retreat/" target="\_blank" title="Instagram Profile">therapy.retreat</a></p>
+                <p>Telegram: <a href="https://t.me/dance_fight" target="\_blank" title="Telegram Public">dance_fight</a></p>
+            </div>   
         </section>  
     </div>
 
