--- a/ru/index.html
+++ b/ru/index.html
@@ -60,9 +60,9 @@
  
             </div>            
         </div>
-        <div class="column_photo">
-            <img src="../img/larchencoach.png" alt="Фото">
-        </div>        
+        <div class="column_photo_tall">
+            <img width="485" src="../img/920 perfect.png" alt="Alisa photo">
+        </div>       
     </div>
     <div class="end_text">
         <p class="maintext">Обладая экспертными знаниями в области образования, психотерапии, коучинга и медиапроизводства, я создаю индивидуальные сессии и групповые семинары, охватывающие soft skills для жизни, школы и бизнеса.</p>
