--- a/uk/index.html
+++ b/uk/index.html
@@ -61,9 +61,9 @@
 
            </div>
         </div>
-        <div class="column_photo">
-            <img src="../img/larchencoach.png" alt="Фото">
-        </div>        
+        <div class="column_photo_tall">
+            <img width="485" src="../img/920 perfect.png" alt="Alisa photo">
+        </div>     
     </div>
     <div class="end_text">
         <p class="maintext">Маючи експертні знання в галузі освіти, психотерапії, коучингу та медіавиробництва, я створюю індивідуальні сесії та групові семінари, які охоплюють soft skills для життя, школи та бізнесу.</p>
