--- a/ohmys_x/index.html
+++ b/ohmys_x/index.html
@@ -210,7 +210,7 @@
                     </a>
                 </p>
                 <p style="padding-top: 30px;">Кипр, Лимасол</p>
-                <h2>Веганский рестора Fresha</h2>
+                <h2>Веганский ресторан Fresha</h2>
                 <p></p><a style="color: white;"  href="https://www.instagram.com/fresha.cy/" target="_blank">instagram</a></p>
                 <p style="font-size: 24px;  padding-top: 55px;">еда 25€ <br/>лаборатория 50€</p>
             </div>
