--- a/uk/index.html
+++ b/uk/index.html
@@ -93,8 +93,8 @@
             <h2>Социальні мережі</h2>
             <div style="padding-left: 30px;">
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
-                <p>FaceBook: <a href="https://www.facebook.com/Lissenx/" target="\_blank" title="FaceBook Profile">Lissenx</a></p>
-                <p>Instagram: <a href="https://www.instagram.com/therapy.retreat/" target="\_blank" title="Instagram Profile">therapy.retreat</a></p>
+                <p>FaceBook: <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">Lissenx</a></p>
+                <p>Instagram: <a href="https://www.instagram.com/alisa.solutions/" target="\_blank" title="Instagram Profile">therapy.retreat</a></p>
                 <p>Telegram: <a href="https://t.me/dance_fight" target="\_blank" title="Telegram Public">dance_fight</a></p>
             </div>   
         </section>  
