--- a/ohmys_x/index.html
+++ b/ohmys_x/index.html
@@ -6,12 +6,12 @@
     <title>Чувственный писательский обед "Oh (my) sæx!"</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
         
         body {
             background-color: #FFFEF1;
             margin: 0; padding: 0;
-            font-family: "Nunito", sans-serif;
+            font-family: 'Nunito', 'Arial', sans-serif;
             font-size: large;
         }
         .card-container {
