--- a/ru/index.html
+++ b/ru/index.html
@@ -97,8 +97,8 @@
             <h2>Социальные сети</h2>
             <div style="padding-left: 30px;">
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
-                <p>FaceBook: <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">Lissenx</a></p>
-                <p>Instagram: <a href="https://www.instagram.com/alisa.solutions/" target="\_blank" title="Instagram Profile">therapy.retreat</a></p>
+                <p>FaceBook: <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
+                <p>Instagram: <a href="https://www.instagram.com/alisa.solutions/" target="\_blank" title="Instagram Profile"alisa.solutions</a></p>
                 <p>Telegram: <a href="https://t.me/dance_fight" target="\_blank" title="Telegram Public">dance_fight</a></p>
             </div>            
     
