--- a/ru/index.html
+++ b/ru/index.html
@@ -77,11 +77,11 @@
             <div class="price">
                 <ul>
                     <li><b>1 сессия:</b> актуализировать проблему
-                         <p>€108 = 2-3 часа = удобное время</p></li>
+                         <p>2-3 часа = удобное время</p></li>
                     <li><b>3 недели:</b> начать трансформацию
-                         <p>€1008 = 21 сессия = 1 час = ежедневно</p></li>
+                         <p>21 сессия = 1 час = ежедневно</p></li>
                     <li><b>3 месяца:</b> интегрировать изменение
-                         <p>€ обсуждается = покровительство</p></li>
+                         <p>покровительство</p></li>
                 </ul>
             </div>
     
