--- a/uk/index.html
+++ b/uk/index.html
@@ -76,11 +76,11 @@
             <div class="price">
                 <ul>
                     <li><b>1 сесія:</b> актуалізувати проблему
-                         <p>€108 = 2-3 години = зручний час</p></li>
+                         <p>2-3 години = зручний час</p></li>
                     <li><b>3 тижні:</b> почати трансформацію
-                         <p>€1008 = 21 сесія = 1 година = щоденно</p></li>
+                         <p>21 сесія = 1 година = щоденно</p></li>
                     <li><b>3 місяці:</b> інтегрувати зміну
-                         <p>€ обговорюється = патронаж</p></li>
+                         <p>патронаж</p></li>
                 </ul>
             </div>
         </section>
