Убрал слово цена

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <section id="pricing" class="bg">
     
-            <h2>Prices and packages</h2>
+            <h2>Packages</h2>
     
             <div class="price">
                 <ul>
