--- a/ru/index.html
+++ b/ru/index.html
@@ -72,7 +72,7 @@
 
         <section id="pricing" class="bg">
     
-            <h2>Цена и пакеты</h2>
+            <h2>Пакеты</h2>
     
             <div class="price">
                 <ul>
