--- a/uk/index.html
+++ b/uk/index.html
@@ -72,7 +72,7 @@
 
     <div class="container2">
         <section id="pricing" class="bg">
-            <h2>Ціна та пакети</h2>
+            <h2>Пакети</h2>
             <div class="price">
                 <ul>
                     <li><b>1 сесія:</b> актуалізувати проблему
